# fasterjet

./: .gitignore  CMakeLists.txt  README.md  bottleneck_tests.xlsx
include/fasterjet/: DetailedException.hpp  jet.hpp  jetPrivate.hpp  jetalgorithmsCPU.hpp  jetalgorithmsGPU.hpp  precompiledheader.hpp  threadpool.hpp  timer.hpp  utils.hpp  utils_avx.hpp  utils_cuda.hpp
src/: jetPrivate.cpp  jetalgorithmsCPU.cpp  jetalgorithmsGPU.cu  main.cpp  notes.txt  utils.cpp
